SERVER-71296 Coverity analysis defect 134119: Macro compares unsigned to 0